# password-health-analyzer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generator.py  gui.py  main.py  pyproject.toml  requirements-dev.txt  reuse_detector.py  storage.py  strength_checker.py  tests.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
